fix home spacing and finished challenge 04

--- a/desafios/desafio-4/styles/style.scss
+++ b/desafios/desafio-4/styles/style.scss
@@ -1,14 +1,14 @@
 $fontTittle: 'Merriweather';
 $fontSans: 'Lato';
 
-$bgSite: #d7d4ff;
-$buttonColor: #6c63ff;
+$green: #04c35c;
+$blue: #2b6cb0;
 
 $white: #ffffff;
-$white300: #f9f9f9;
+$white300: #f7fafc;
 
-$title: #2b2b2b;
-$text: #555555;
+$dark: #1a202c;
+$input: #e8e8e8;
   
 /*Reset*/
 * {
@@ -18,8 +18,8 @@ $text: #555555;
 }
 
 body {
-    background: $bgSite;
     width: 100%;
+    font-family: $fontSans;
 }
 h1,
 h2,
@@ -53,6 +53,167 @@ input:focus {
 }
 
 .container{
-    width: 90%;
+    width: 85%;
     margin: 0 auto;
+    @media screen and(min-width:1024px){
+        width: 50%;
+    }
+}
+
+main{
+    .wrapper{
+        display: flex;
+        .banner{
+            display: none;
+        }
+        .login{
+            width: 50%;
+            height: 100%;
+            .login-wrapper{
+                width: 100%;
+                height: 100vh;
+                padding: 4.375rem 0 3.125rem 0;
+                display: flex;
+                flex-direction: column;
+                .title-login{
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 0.625rem;
+                    margin-bottom: 2.5rem;
+                    .subtitle{
+                        font-family: $fontTittle;
+                        font-size: 1rem;
+                        font-weight: 400;
+                        color: $dark;
+                    }
+                    .title{
+                        font-size: 1.625rem;
+                        font-weight: 700;
+                        font-family: $fontTittle;
+                        color: $dark;
+                    }
+                    &.animate{
+                        animation: slideDown 1s linear;
+                    }
+                }
+                form{
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 0.625rem;
+                    .label{
+                        font-size: 1rem;
+                        color: $dark;
+                        font-weight: 400;
+                    }
+                    .input-field{
+                        width: 100%;
+                        padding: 1rem 1.25rem;
+                        border-radius: 5px;
+                        color: $dark;
+                        font-size: 0.875rem;
+                        border: 1px solid $input;
+                    }
+                    .options{
+                        width: 100%;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        margin: 1rem 0;
+                        .radio-btn{
+                            input{
+                                margin-right: 0.625rem;
+                                background: $input;
+                                border: 1px solid $input;
+                            }
+                            label{
+                                font-size: 0.875rem;
+                                color: $dark;
+                                font-weight: 400;
+                            }
+                        }
+                        a{
+                            font-size: 0.875rem;
+                            color: $blue;
+                            font-weight: 400;
+                        }
+                    }
+                    .btn{
+                        width: 100%;
+                        padding: 1rem 0;
+                        border-radius: 5px;
+                        font-size: 1rem;
+                        color: #fff;
+                        font-weight: 700;
+                    }
+                    .btn-login{
+                        background: $green;
+                        margin-bottom: 0.375rem;
+                    }
+                    .btn-google{
+                        background: $dark;
+                        display: flex;
+                        justify-content:center;
+                        align-items:center;
+                        gap: 0.75rem;
+                    }
+                    &.animate{
+                        animation: slideDown 1s linear;
+                    }
+                }
+                .sign-up{
+                    width: 100%;
+                    text-align: center;
+                    font-size: 1rem;
+                    color: $dark;
+                    font-weight: 400;
+                    margin-top:auto;
+                    a{
+                        color: $blue;
+                    }
+                }
+            }
+        }
+    }
+    @media screen and (min-width: 1024px){
+        .wrapper{
+            .banner{
+                display: block;
+                width: 50%;
+                background: $white300;
+                display: flex;
+                justify-content:center;
+                align-items:center;
+                img{
+                    width: 50%;
+                    height: 50%;
+                }
+            }
+        }
+    }
+    @media screen and (min-width: 1600px){
+        .wrapper{
+            .login{
+                .login-wrapper{
+                    padding: 12.5rem 0 3.125rem 0;
+                }
+            }
+        }
+    }
+}
+
+@keyframes slideDown{
+    0% {
+        opacity: 0;
+        transform: translateY(-150px);
+    }
+    50%{
+        opacity: 0.5;
+        transform: translateY(-75px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
